# vmc-project

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  README_old.md  annotated.html  classes.html  dir_000001_000000.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  group__Helper.html  group__algs-constants.html  group__core-functions.html  group__core-helpers.html  group__core-helpers.map  group__core-helpers.md5  group__energy-calc-helpers.html  group__energy-calc-helpers.map  group__energy-calc-helpers.md5  group__energy-calc.html  group__energy-calc.map  group__energy-calc.md5  group__func-properties.html  group__helpers.html  group__lexic-types.html  group__struct-types.html  group__update-algs-helpers.html  group__update-algs-helpers.map  group__update-algs-helpers.md5  group__update-algs.html  group__update-algs.map  group__update-algs.md5  (+121 more)
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: provide-dependencies-ci.sh  provide-dependencies-local.sh  provide-user.sh
.github/workflows/: gh-pages.yaml  run-tests.yaml  run-tests.yml
search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+26 more)
src/: speak.hpp  statistics.cpp  statistics.hpp  statistics.inl  types.hpp  types.inl  types_old.hpp  vmcalgs.cpp  vmcalgs.hpp  vmcalgs.inl  vmchelpers.inl  vmcp.hpp
tests/: test-box-1p1d.cpp  test-box1p1d.cpp  test-ho-1p1d.cpp  test-ho-1p2d.cpp  test-ho-2p1d.cpp  test-ho.cpp  test-rad-1p1d.cpp  test-rad-1p3d.cpp  test-stat.cpp  test-trg-1p1d.cpp  test.cpp  test.hpp  test.txt  test1.cpp  test_old.cpp
